--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -19,15 +19,7 @@
 
   <div class="container2">
   <br>
-
-  loads of randowm text hereloads of randowm text hereloads of randowm text hereloads of randowm text hereloads of randowm text hereloads of randowm text here
-  loads of randowm text hereloads of randowm text hereloads of randowm text hereloads of randowm text hereloads of randowm text hereloads of randowm text here
-  loads of randowm text hereloads of randowm text hereloads of randowm text hereloads of randowm text hereloads of randowm text hereloads of randowm text here
-  loads of randowm text hereloads of randowm text hereloads of randowm text hereloads of randowm text hereloads of randowm text hereloads of randowm text here
-  loads of randowm text hereloads of randowm text hereloads of randowm text hereloads of randowm text hereloads of randowm text hereloads of randowm text here
-  loads of randowm text hereloads of randowm text hereloads of randowm text hereloads of randowm text hereloads of randowm text hereloads of randowm text here
-  loads of randowm text hereloads of randowm text hereloads of randowm text hereloads of randowm text hereloads of randowm text hereloads of randowm text here
-  loads of randowm text hereloads of randowm text hereloads of randowm text hereloads of randowm text hereloads of randowm text hereloads of randowm text here
+Welcome to hell spinster bitches. time to stop eating jelly beans. Welcome to hell spinster bitches. time to stop eating jelly beans.Welcome to hell spinster bitches. time to stop eating jelly beans.Welcome to hell spinster bitches. time to stop eating jelly beans.Welcome to hell spinster bitches. time to stop eating jelly beans.Welcome to hell spinster bitches. time to stop eating jelly beans.Welcome to hell spinster bitches. time to stop eating jelly beans.Welcome to hell spinster bitches. time to stop eating jelly beans.Welcome to hell spinster bitches. time to stop eating jelly beans.Welcome to hell spinster bitches. time to stop eating jelly beans.Welcome to hell spinster bitches. time to stop eating jelly beans.Welcome to hell spinster bitches. time to stop eating jelly beans.Welcome to hell spinster bitches. time to stop eating jelly beans.Welcome to hell spinster bitches. time to stop eating jelly beans.Welcome to hell spinster bitches. time to stop eating jelly beans.Welcome to hell spinster bitches. time to stop eating jelly beans.Welcome to hell spinster bitches. time to stop eating jelly beans.Welcome to hell spinster bitches. time to stop eating jelly beans.
 <br><br>
 <%= image_tag "img2.jpg", class:"img-circle", size:"500", alt:"swimming pool" %>
 <br><br>
