--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,6 +1,6 @@
 <%# add navigation links to this file %>
 <li><%= link_to 'About', page_path('about') %></li>
-<li><%= link_to 'Skankometer', page_path('page1') %></li>
+<li><%= link_to 'Page1', page_path('page1') %></li>
 <li><%= link_to 'Page2', page_path('page2') %></li>
 <li><%= link_to 'Formulario', formulario_path('new') %></li>
 <li><%= link_to 'Contacto', page_path('contacto') %></li>
@@ -8,4 +8,7 @@
   <li><%= link_to 'Salir', destroy_user_session_path, method: :delete %></li>
 <% else %>
 <li><%= link_to 'Acceso', new_user_session_path %></li>
+<% end %>
+<% if current_user && current_user.admin? %>
+  <li><%= link_to 'Pacientes', formularios_path %></li>
 <% end %>
