--- a/app/views/formularios/index.html.erb
+++ b/app/views/formularios/index.html.erb
@@ -51,4 +51,4 @@
 
 <br>
 
-<%= link_to 'New Formulario', new_formulario_path %>
+<%= link_to 'New Formulario', new_formulario_path, class:"btn btn-info btn-lg" %>
