--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,17 @@
-<% content_for :title do %>About<% end %>
-<h3>About the Website</h3>
-<p>
-This web application was created with
-<%= link_to('Rails Composer', 'http://railsapps.github.io/rails-composer/') %>
-from the <%= link_to('RailsApps project', 'http://railsapps.github.io/') %>.
-</p>
+<h1>Medicina Funcional</h1><br>
+
+<p>El modelo de la Medicina Funcional tiene un enfoque
+individualizado y científico que permite a los pacientes y
+terapeutas trabajar juntos para identificar las causas
+subyacentes de las desordenes y enfermedades para promocionar
+un optimo bienestar. Requiere un entendimiento detallado de
+la genética, bioquímica, y factores de estilo de vida de cada
+individuo y estudia estos datos para movilizar planes de
+tratamiento personalizados que conducen a resultados óptimos.
+<br><br>
+A diferencia de la medicina convencional, La medicina funcional
+se centra en las raíces de los desordenes y en los factores
+subyacentes que influyen en la salud. Su enfoque es científico
+y a la vez holístico, considerando elementos de mente/cuerpo,
+factores genéticos e impactos medioambientales como la dieta,
+estilo de vida y ejercicio.</p>
