--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,7 +1,2 @@
-non p tag
-
-<p class="great-vibes">p tag
-<h1>this is the first</h1>
-<h2><p>this is the first</h2>
-<h3>this is the first</p></h3>
-</p>
+<h1>Terapia nutricional</h1>
+<%= image_tag 'functional-med.png', class:"nutricion" %>
