--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,7 +1,15 @@
 <%# add navigation links to this file %>
 <li><%= link_to 'Inicio', root_path %></li>
-<li><%= link_to 'Medicina Funcional', page_path('about') %></li>
-<li><%= link_to 'Terapia Nutricional', page_path('page1') %></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Terapia Nutricional <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to 'Que es la Terapia Nutricional?', page_path('page1') %></li>
+            <li><%= link_to 'Medicina Funcional', page_path('about') %></li>
+          </ul>
+        </li>
+
+<li></li>
+<li></li>
 <li><%= link_to 'Acupuntura', page_path('page2') %></li>
 <li><%= link_to 'Consulta ', page_path('consulta') %></li>
 <li><%= link_to 'Contacto', page_path('contacto') %></li>
