--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <%= csrf_meta_tags %>
 
     <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Great+Vibes" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Tillana" rel="stylesheet">
   </head>
   <body>
     <header>
