--- a/app/views/pages/consulta.html.erb
+++ b/app/views/pages/consulta.html.erb
@@ -3,8 +3,7 @@
 <p>Una consulta individual te proporciona información detallada
 acerca de como puedes manipular tu dieta y estilo de vida para
 mejorar tu salud. Es educacional, motivacional y personalizado.</p>
-<br>
-<br>
+
 <p>El numero de consultas varia según el individuo, sus metas de
 salud, la complejidad del caso, y depende de la motivación
 personal para implementar cambios en la dieta y estilo de
@@ -14,21 +13,21 @@ problema y corregirlo con la dieta y estilo de vida.
 Dependiendo de tus objetivos de salud, este proceso puede
 durar hasta 2 o 3 meses pero proporcionará las herramientas
 para mantenerte con salud óptimo durante el resto de tu vida.</p>
-<br><br>
+
 <p>Antes de la cita tendrás que rellenar un
 <%= link_to 'cuestionario', new_formulario_path %>, éste
 incluye preguntas acerca de tu historial de salud, tu dieta
 actual, medicamentos y estilo de vida. Habrá que entregarlo
 24 horas antes de la cita</p>
-<br><br><br><br><br>
 
-PRIMERA CONSULTA<br><br>
+
+<h2>Primera Consulta</h2>
 <p>Aquí identificamos posibles desencadenantes y factores
   subyacentes los cuales podrían influir en tu salud. Tu
 terapeuta elabora tu historial clínico, escucha tu historia,
 te hace muchas preguntas y puede que te haga algunas
 evaluaciones clínicas.</p>
-<br><br>
+
 <p>Utilizando tu historial clínico y otras evaluaciones clínicas
 tu terapeuta explica sus recomendaciones y sugiere una
 estrategia nutricional apropiada. El enfoque está en los
@@ -38,24 +37,24 @@ desequilibrio nutricional. Además, en el caso que sea
 necesario, ofrece recomendaciones para más pruebas como
 análisis hormonal, pruebas de alergias, análisis de
 heces/orina o pruebas genómicas.</p>
-<br><br>
+
 <p>La última parte de la consulta es una negociación entre
 terapeuta y cliente sobre la mejor forma de implementar
 las recomendaciones. Esto incluye la fijación de metas,
 estableciendo objetivos claros y manejables, según cada
 individuo.</p>
-<br><br>
-Después de la consulta
-<br><br>
+
+<h2>Después de la consulta</h2>
+
 <p>Una semana después de tu consulta recibirás un email de
 seguimiento y documentos incluyendo tu programa nutricional,
 un informe de tu caso, una receta de suplementos,
 recomendaciones de pruebas de laboratorio (en el caso que
 sea necesario) e instrucciones en cómo proceder con las
 pruebas.</p>
-<br><br>
-Consulta de Seguimiento
-<br><br>
+
+<h2>Consulta de Seguimiento</h2>
+
 <p>Las consultas de seguimiento comienzan con una revisión de
 la evolución de tu programa terapeútico, una conversación
 sobre los cambios experimentados desde la primera consulta
@@ -64,11 +63,15 @@ terapeuta evaluará tus planes nutricionales, tus metas y
 estrategias y actualizará tu programa. Las consultas de
 seguimiento te proporcionarán la oportunidad de valorar los
 diferentes aspectos de tu salud y bienestar.</p>
-<br><br>
+r>
 <p>En el caso que la persona tenga dificultad siguiendo la dieta
 y los cambios en el estilo de vida, en las sesiones de
 seguimiento se le prestará mas atención al elemento de
 coaching nutricional y de salud, según Técnicas de
-programación lingüística y neuroplasticidad.</p><br><br>
+programación lingüística y neuroplasticidad.</p>
 
+<h2>Precios</h2>
+
+<p>Primera consulta 60e, Consultas de seguimiento 40e</p
+  >
 <%= link_to 'Rellenar Cuestionario', new_formulario_path, class:"btn btn-info btn-lg" %>
