--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -3,15 +3,31 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Terapia Nutricional <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><%= link_to 'Que es la Terapia Nutricional?', page_path('page1') %></li>
+            <li><%= link_to 'Que es la Terapia Nutricional?', page_path('terapia_nut') %></li>
             <li><%= link_to 'Medicina Funcional', page_path('about') %></li>
+          </ul>
+        </li>
+
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Acupuntura<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to 'Acupuntura', page_path('acupuntura_gen') %></li>
+            <li><%= link_to 'Acupuntura Estética Facial?', page_path('acupuntura_est') %></li>
+          </ul>
+        </li>
+
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Consulta<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to 'Terapia Nutricional', page_path('consulta') %></li>
+            <li><%= link_to 'Acupuntura', page_path('consulta_acu') %></li>
+            <li><%= link_to 'Acupuntura Estética', page_path('consulta_est') %></li>
+            <li><%= link_to 'Combinada (Terapia Nutricional y Acupuntura)', page_path('consulta_com') %></li>
           </ul>
         </li>
 
 <li></li>
 <li></li>
-<li><%= link_to 'Acupuntura', page_path('page2') %></li>
-<li><%= link_to 'Consulta ', page_path('consulta') %></li>
 <li><%= link_to 'Contacto', page_path('contacto') %></li>
 
 <% if user_signed_in? %>
