--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Terapia nutricional</h1>
+<br><br><br><h1>Servicios de Nutrición Clínica y Terapia Nutricional,
+   de Acupuntura y Acupuntura Estética Facial
+   en la tienda ecológica- Eslaveco del Polígono Pisa</h1>
+   <br><br>
 <%= image_tag 'functional-med.png', class:"nutricion" %>
+<br><br>
