append jpg and png to images to try and make precompile work

--- a/app/views/pages/acupuntura_est.html.erb
+++ b/app/views/pages/acupuntura_est.html.erb
@@ -13,7 +13,7 @@
    diagnosis diferencial y el uso de agujas para mover o equilibrar el chi, la sangre,
    y líquidos dentro del organismo, además restaurar y mantener la harmonía global.</p>
 
-<%= image_tag("face_points", :class => "style_image4") %>
+<%= image_tag("face_points.jpg", :class => "style_image4") %>
 
   <h1 class="off">Beneficios</h1><br>
 <p>
