--- a/app/views/pages/acupuntura_gen.html.erb
+++ b/app/views/pages/acupuntura_gen.html.erb
@@ -24,7 +24,7 @@ ensayos clínicos.
 Entre las condiciones que se indican en los informes<p>
 figuran:<br><br>
 
-<%=image_tag("sintomas", :class => "style_image6") %>
+<%=image_tag("sintomas.png", :class => "style_image6") %>
 <br>
 
 <b><p>La acupuntura tiene excelentes resultados tratando desórdenes y dolores
